@@ -22,6 +22,9 @@
       <licence tarname="gdb-%-mingw32-%-lic.tar.%" />
 
       <component class="bin">
+	<release tarname="gdb-7.6.1-1-mingw32-bin.tar.lzma">
+	  <requires eq="mingw32-libz-*-mingw32-dll-1.tar" />
+	</release>
         <release tarname="gdb-7.5-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
@@ -52,12 +55,29 @@
       </component>
 
       <component class="doc">
+        <release tarname="gdb-7.6.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.5-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.4-2-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3-2-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.2-1-mingw32-doc.tar.lzma" />
+      </component>
+
+      <component class="info">
+        <release tarname="gdb-7.6.1-1-mingw32-info.tar.lzma" />
+      </component>
+
+      <component class="lang">
+        <release tarname="gdb-7.6.1-1-mingw32-lang.tar.lzma" />
+      </component>
+
+      <component class="man">
+        <release tarname="gdb-7.6.1-1-mingw32-man.tar.lzma" />
+      </component>
+
+      <component class="lic">
+        <release tarname="gdb-7.6.1-1-mingw32-lic.tar.lzma" />
       </component>
     </package>
 
